--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 numpy
+nibabel
 scipy
 Pillow
 cython
 matplotlib
 scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
+tensorflow==1.13.1
+keras==2.0.8
 opencv-python
 h5py
 imgaug
